Update Quienes Somos

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
         </div>
     </section>
 
+    <section id="qs">
+        <div class="container-fluid">
+            <div class="content-center">
+                <h2><b>Quienes Somos</b></h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ipsam non ea totam tempore quam
+                    consequuntur rem quasi animi commodi debitis rerum officia exercitationem, vel voluptas ratione
+                    consequatur veniam quaerat?</p>
+            </div>
+        </div>
+
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
