--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images/logo-dark.png" class="logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -76,7 +76,50 @@
                     consequatur veniam quaerat?</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="qs-container">
+                    <div class="qs-details">
+                        <a href="#">
+                            <h2>POO</h2>
+                        </a>
+                        <a href="#">
+                            <p>Programacion Orientada a Objetos</p>
+                        </a>
+                    </div>
+                    <img src="images/poo.jpg" class="img-fluid" alt="qs 1">
+                </div>
+            </div>
 
+            <div class="col-md-6">
+                <div class="qs-container">
+                    <div class="qs-details">
+                        <a href="#">
+                            <h2>Programacion modular</h2>
+                        </a>
+                        <a href="#">
+                            <p>Programacion modular</p>
+                        </a>
+                    </div>
+                    <img src="images/modular.jpg" class="img-fluid" alt="qs 2">
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="qs-container">
+                    <div class="qs-details">
+                        <a href="#">
+                            <h2>Programacion competitiva</h2>
+                        </a>
+                        <a href="#">
+                            <p>Competencias</p>
+                        </a>
+                    </div>
+                    <img src="images/competitiva.jpg" class="img-fluid" alt="qs 3">
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
