--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
                 </div>
             </div>
 
+            <div class="col-md-6">
+                <div class="qs-container">
+                    <div class="qs-details">
+                        <a href="#">
+                            <h2>Programacion competitiva</h2>
+                        </a>
+                        <a href="#">
+                            <p>Competencias</p>
+                        </a>
+                    </div>
+                    <img src="images/competitiva.jpg" class="img-fluid" alt="qs 4">
+                </div>
+            </div>
+            
+            <div class="text-center topmargin-sm">
+                <p>Estas listo para superarte?</p>
+                <a href="#" class="text-dark">Empieza ya!</a>
+            </div>
         </div>
     </section>
 
