--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="post">Postula aqui</a>
+                        <a class="nav-link" href="login.html" id="post">Postula aqui</a>
                     </li>
 
                     </li>
