--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/logo-dark.png" class="logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo-dark.png" class="logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -30,7 +30,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="inic">Inicio </a>
+                        <a class="nav-link" href="index.html" id="inic">Inicio </a>
                     </li>
 
                     <li class="nav-item">
