--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="qs">Quienes Somos</a>
                     </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="Malla">Malla Curricular</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="contac">Contactanos</a>
