--- a/index.html
+++ b/index.html
@@ -8,149 +8,108 @@
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
 
-    <link href="style.css" rel="stylesheet">
-
+    <!--Estilos-->
+    <link href="css/style.css" rel="stylesheet">
 
     <title>Fisinova</title>
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo-dark.png" class="logo-brand" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <ion-icon name="menu-outline"></ion-icon>
-            </button>
+    <!--NavBar-->
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">Fisinova</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="/img/menu.svg">
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
+        <!--Items-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" id="inic">Inicio </a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="">Inicio </a>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="qs">Quienes Somos</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="">Sobre Nosotros</a>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="contac">Contactanos</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="">Agenda</a>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="event">Eventos</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html" id="post">Postula aqui</a>
-                    </li>
-
-                    </li>
-                </ul>
-            </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="">Contactanos</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
-    <section id="hero">
-        <div class="container topmargin-lg">
-            <div class="content-center">
-                <h1>Mejora con Nosotros</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem consequatur voluptate dolores libero
-                    officiis magnam accusamus rerum aut assumenda fuga cum repellat ullam ducimus obcaecati, excepturi,
-                    quos molestiae id iste.</p>
-                <a href="#" class="btn btn-light topmargin-sm">Participa</a>
+    <header id="header">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="header-content-left">
+                        <h1>Bienvenido</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, est! Sed odit distinctio
+                            sint nostrum. Distinctio aliquid commodi ea quam architecto, illum esse nesciunt nemo
+                            laboriosam maiores? Sed, optio deserunt.</p>
+                        <a href="#" class="btn btn-outline-secondary btn-lg mt-2">Saber mas</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="header-content-right">
+                        <img src="img/boyprog.gif">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </header>
+
+    <section id="about-one">
+        <div clas="container">
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <div class="info-left">
+                        <p clas="h2 mb-2">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, molestiae. Perferendis
+                            cupiditate fuga
+                            modi aspernatur ex reiciendis, eos sunt recusandae fugiat rerum maiores eius sequi, aliquid
+                            dolorem
+                            obcaecati. Id, labore!
+                        </p>
+                        <p class="h4">-uwu</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info-right">
+                        <img src="img/logo.png">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="qs">
-        <div class="container-fluid">
-            <div class="content-center">
-                <h2><b>Quienes Somos</b></h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ipsam non ea totam tempore quam
-                    consequuntur rem quasi animi commodi debitis rerum officia exercitationem, vel voluptas ratione
-                    consequatur veniam quaerat?</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="qs-container">
-                    <div class="qs-details">
-                        <a href="#">
-                            <h2>POO</h2>
-                        </a>
-                        <a href="#">
-                            <p>Programacion Orientada a Objetos</p>
-                        </a>
-                    </div>
-                    <img src="images/poo.jpg" class="img-fluid" alt="qs 1">
-                </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="qs-container">
-                    <div class="qs-details">
-                        <a href="#">
-                            <h2>Programacion modular</h2>
-                        </a>
-                        <a href="#">
-                            <p>Programacion modular</p>
-                        </a>
-                    </div>
-                    <img src="images/modular.jpg" class="img-fluid" alt="qs 2">
-                </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="qs-container">
-                    <div class="qs-details">
-                        <a href="#">
-                            <h2>Programacion competitiva</h2>
-                        </a>
-                        <a href="#">
-                            <p>Competencias</p>
-                        </a>
-                    </div>
-                    <img src="images/competitiva.jpg" class="img-fluid" alt="qs 3">
-                </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="qs-container">
-                    <div class="qs-details">
-                        <a href="#">
-                            <h2>Programacion competitiva</h2>
-                        </a>
-                        <a href="#">
-                            <p>Competencias</p>
-                        </a>
-                    </div>
-                    <img src="images/competitiva.jpg" class="img-fluid" alt="qs 4">
-                </div>
-            </div>
-            
-            <div class="text-center topmargin-sm">
-                <p>Estas listo para superarte?</p>
-                <a href="#" class="text-dark">Empieza ya!</a>
-            </div>
-        </div>
-    </section>
-
+    <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
 </body>
 
 </html>
