--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <a class="navbar-brand" href="#">Fisinova</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Sobre Nosotros</a>
+                    <a class="nav-link" href="#about" id="">Sobre Nosotros</a>
                 </li>
 
                 <li class="nav-item">
@@ -55,7 +55,7 @@
     <header id="header">
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                     <div class="header-content-left">
                         <h1>Bienvenido</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, est! Sed odit distinctio
@@ -64,7 +64,7 @@
                         <a href="#" class="btn btn-outline-secondary btn-lg mt-2">Saber mas</a>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                     <div class="header-content-right">
                         <img src="img/boyprog.gif">
                     </div>
@@ -76,10 +76,16 @@
 
     <section id="about-one">
         <div clas="container">
-            <div class="row mt-5">
+            <div class="row no-gutters">
                 <div class="col-md-6">
-                    <div class="info-left">
-                        <p clas="h2 mb-2">
+                    <div class="about-left">
+                        <img src="img/logo-dark.png">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="about-right">
+                        <h1>Somos una Comunidad</h1>
+                        <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, molestiae. Perferendis
                             cupiditate fuga
                             modi aspernatur ex reiciendis, eos sunt recusandae fugiat rerum maiores eius sequi, aliquid
@@ -89,16 +95,80 @@
                         <p class="h4">-uwu</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="agenda">
+        <div clas="container">
+            <h1>Agenda</h1>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/agenda_1.jpg" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/agenda_2.jpg" class="d-block w-100">
+                            </div>
+
+                        </div>
+
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section id="contact-one">
+        <div clas="container">
+            <div class="row no-gutters">
                 <div class="col-md-6">
-                    <div class="info-right">
-                        <img src="img/logo.png">
+                    <div class="contact-left">
+                        <h1>Contactanos</h1>
+                        <form class="card">
+                            <div class="card-body">
+
+                                <div class="form-group">
+                                    <input type="text" placeholder="Nombre" class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="email" placeholder="email" class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <textarea rows="3" cols="3" placeholder="Mensaje" class="form-control"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-outline-secondary btn-block">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="contact-right">
+                        <h1>Informacion</h1>
+                        <div class="form-group">
+                            <input type="email" placeholder="email" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-outline-secondary btn-block">Enviar</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 
 
     <!--Scripts-->
