--- a/f/indexar.html
+++ b/f/indexar.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="imagenes/logo-dark.png"  class="logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="#"><img src="imagenes/logo-dark.png" class="logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -35,23 +35,95 @@
                         <a class="nav-link" href="#" id="home">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"id="portafolio">ga</a>
+                        <a class="nav-link" href="#" id="portafolio">ga</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link " href="#" id="About us ">About us</a>
+                        <a class="nav-link " href="#" id="Aboutus">About us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#" id="Pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#" id = "Testimonio">Testimonio</a>
+                        <a class="nav-link " href="#" id="Testimonio">Testimonio</a>
 
                 </ul>
 
             </div>
         </div>
     </nav>
+    <section id="hero">
+        <div class="container">
+            <div class="conter-center topmargin-lg">
+
+
+                <h1>Comunidad Fisinova</h1>
+                <p>
+                    Dice la moraleja, el que no coge , se deja :V
+                </p>
+                <a href="#" class="btn btn-light">Postula aqui</a>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="portafolio">
+        <div class=" container-fluid">
+            <div class="conter-center">
+                <h2>Trabajar siempre</h2>
+                <p><b>La constancia hace al hombre</b></p>
+            </div>
+            <div class="row">
+                <div class="cold-nd-6">
+                    <div class="portafolio-container">
+                        <div class="portafolio-details">
+                            <a href="#">
+                                <h2>Programacion</h2>
+                            </a>
+                            <a href="#">
+                                <p>- divide y venceras </p>
+                            </a>
+
+                        </div>
+                        <img class="img-fluids w-200"src="imagenes/competitiva.jpg" class="img-fluids" alt="portafolio 1">
+                    </div>
+
+                </div>
+
+                <div class="cold-nd-6">
+                    <div class="portafolio-container">
+                        <div class="portafolio-details">
+                            <a href="#">
+                                <h2>Programacion Modular</h2>
+                            </a>
+                            <a href="#">
+                                <p>- clases </p>
+                            </a>
+
+                        </div>
+                        <img class="img-fluids w-200" src="imagenes/modular.jpg" class="img-fluids" alt="portafolio 2">
+                    </div>
+
+                </div>
+            </div>
+            <div class="text-center topmargin-sn">
+                <p>
+                    conocenos un poco mas
+                </p>
+                <a href="#" class="text-dark">ahora mas que nunca.</a>
+            </div>
+        </div>
+    </section>
+    <section id="Aboutus" class="fondo-color" >
+        <div class="container"class="borde">
+            <div class="conter-center">
+                <h2>conocenos</h2>
+                <p><b>Somos la red #1</b></p>
+            </div>
+        </div>
+
+
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
