--- a/index.html
+++ b/index.html
@@ -103,15 +103,18 @@
     <section id="agenda">
         <div clas="container">
             <h1>Agenda</h1>
-            <div class="row">
-                <div class="col-sm-8">
+            <div class="row no-gutters">
+                <div class="col-sm">
+                    
+                  </div>
+                <div class="col-sm-6">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/agenda_1.jpg" class="d-block w-100">
+                                <img src="img/agenda_1.jpg" width="100%" height="100%">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/agenda_2.jpg" class="d-block w-100">
+                                <img src="img/agenda_2.jpg" width="100%" height="100%">
                             </div>
 
                         </div>
@@ -128,6 +131,9 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-sm">
+                    
+                  </div>
             </div>
         </div>
         </div>
