--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" id="">Sobre Nosotros</a>
+                    <a class="nav-link" href="sobreNosotros.html" id="">Sobre Nosotros</a>
                 </li>
 
                 <li class="nav-item">
@@ -105,7 +105,7 @@
             <h1>Agenda</h1>
             <div class="row no-gutters">
                 <div class="col-sm">
-                    
+
                   </div>
                 <div class="col-sm-6">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                    
+
                   </div>
             </div>
         </div>
