--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -35,7 +35,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Inicio </a>
+                    <a class="nav-link" href="index.html" id="">Inicio </a>
                 </li>
 
                 <li class="nav-item">
