--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -15,6 +15,7 @@
 
     <!--Estilos-->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="sobreNosotros.css">
 
     <title>Fisinova</title>
 
@@ -53,5 +54,16 @@
         </div>
     </nav>
     <h1>Base de datos</h1>
+    <div class="sobreNosotros">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
+            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
+        </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
+            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
+        </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
+            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
+        </p>
+    </div>
 </body>
 </html>
