--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -53,7 +53,9 @@
             </ul>
         </div>
     </nav>
-    <h1>Base de datos</h1>
+    <div class="encabezado">
+        <h1>Sobre Nosotros</h1>
+    </div>
     <div class="sobreNosotros">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
             odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
