--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -57,15 +57,13 @@
         <h1>Sobre Nosotros</h1>
     </div>
     <div class="sobreNosotros">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
-            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
+        <p>Somos un grupo de estudiantes que a traves de esta plataforma promueve la creacion de proyectos en la facultad por medio de concursos
+            (hackathon) con una temática específica. 
         </p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
-            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
+        <p>Además de recopìlar los trabajos finales realizados en cursos orientados a la programación. Si logramos contar con el apoyo de la facultad 
+            los ganadores de los concursos contarán con apoyo para desarrollar su proyecto.
         </p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur tempore voluptas recusandae. Eaque temporibus hic voluptas corrupti autem inventore molestiae veniam, 
-            odio animi, consectetur doloremque laborum quis necessitatibus, sequi labore.
-        </p>
+       
     </div>
 </body>
 </html>
