--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="index.php" id="">Inicio </a>
+                    <a class="nav-link" href="index.html" id="">Inicio </a>
                 </li>
 
                 <li class="nav-item">
