--- a/agenda.html
+++ b/agenda.html
@@ -14,7 +14,7 @@
 
     <!--Estilos-->
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/sobreNosotros.css">
+    <link rel="stylesheet" href="css/agenda.css">
 
     <title>Fisinova</title>
 
@@ -42,7 +42,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Agenda</a>
+                    <a class="nav-link" href="agenda.html" id="">Agenda</a>
                 </li>
 
                 <li class="nav-item">
@@ -57,20 +57,52 @@
             </ul>
         </div>
     </nav>
-    <div class="encabezado">
-        <h1>Sobre Nosotros</h1>
-    </div>
-    <div class="sobreNosotros">
-        <p>Somos un grupo de estudiantes que a traves de esta plataforma promueve la creacion de proyectos en la facultad por medio de concursos (hackathon) con una temática específica.
-        </p>
-        <p>Además de recopìlar los trabajos finales realizados en cursos orientados a la programación. Si logramos contar con el apoyo de la facultad los ganadores de los concursos contarán con apoyo para desarrollar su proyecto.
-        </p>
 
+    <section id="agenda">
+        <div clas="container">
+            <h1>Agenda</h1>
+            <div class="row no-gutters">
+                <div class="col-sm">
+
+                </div>
+                <div class="col-sm-6">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/agenda_1.jpg" width="100%" height="100%">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/agenda_2.jpg" width="100%" height="100%">
+                            </div>
+
+                        </div>
+
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm">
+
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <div class="p">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum reiciendis quos accusamus ex perspiciatis soluta sit est corporis, debitis amet sequi labore quia possimus architecto eveniet et non error harum!</p>
     </div>
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
