--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -46,7 +46,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Contactanos</a>
+                    <a class="nav-link" href="Contactanos.html" id="">Contactanos</a>
                 </li>
                 <li>
                     <a href="phptube/login.php" class="btn2 redondeado">Iniciar sesion</a>
