--- a/agenda.html
+++ b/agenda.html
@@ -94,10 +94,20 @@
         </div>
         </div>
     </section>
+    
+    <section class="Repositorio">
+        <div>
+            <a href="#">Repositorio</a>
+        </div>
+    </section>
 
-    <div class="p">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum reiciendis quos accusamus ex perspiciatis soluta sit est corporis, debitis amet sequi labore quia possimus architecto eveniet et non error harum!</p>
-    </div>
+
+    <section class="Silabus">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo numquam fuga odio molestiae doloribus culpa ullam aliquid quod minima pariatur cumque, vero similique laboriosam a aspernatur nulla voluptatum. Neque, magni.</p>
+        </div>
+    </section>
+
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
