--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Contactanos</a>
+                    <a class="nav-link" href="Contactanos.html" id="">Contactanos</a>
                 </li>
                 <li>
                     <a href="phptube/login.php" class="btn2 redondeado">Iniciar sesion</a>
