--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="">Agenda</a>
+                    <a class="nav-link" href="agenda.html" id="">Agenda</a>
                 </li>
 
                 <li class="nav-item">
