--- a/Contactanos.html
+++ b/Contactanos.html
@@ -132,7 +132,7 @@
                                      <p class="card-text">Fisinova a su alcance con novedades, videos, workshop y talleres.
                                         siganos en todas las redes sociales (Facebook, Instagram, twitter).</p>
                                      <hr>
-                                    <span><a href="https://www.facebook.com/fisinova.unmsm/"><i class="fab fa-facebook rounded-circle" aria-hidden="true"></i></a></span>
+                                    <span><a href="https://www.facebook.com/Fisinova-101414338630966"><i class="fab fa-facebook rounded-circle" aria-hidden="true"></i></a></span>
                                       <span><a href="#"><i class="fab fa-instagram rounded-circle" aria-hidden="true"></i></a></span>
                                       <span><a href="#"><i class="fab fa-linkedin rounded-circle" aria-hidden="true"></i></a></span>
                                 </div>
