--- a/Contactanos.html
+++ b/Contactanos.html
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="card-body text-center mb-2">
                                      <p class="card-text">Fisinova a su alcance con novedades, videos, workshop y talleres.
-                                        siganos en todas las redes sociales (Facebook, Instagram, twitter).</p>
+                                        siganos en todas las redes sociales (Facebook, Instagram, linkedin).</p>
                                      <hr>
                                     <span><a href="https://www.facebook.com/Fisinova-101414338630966"><i class="fab fa-facebook rounded-circle" aria-hidden="true"></i></a></span>
                                       <span><a href="#"><i class="fab fa-instagram rounded-circle" aria-hidden="true"></i></a></span>
@@ -150,7 +150,7 @@
      <section class = "team text-center">
             <div class="container p-5">
                 <h1 class="text">Nuestro Equipo</h1>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iste consectetur quaerat doloremque tempora, voluptatum quas omnis tempore adipisci quisquam aut illum dicta ad numquam odio distinctio est velit vero.</p>
+                <p class="text">Somos Alumnos de la UNMSM ,comprometidos a resolver tus dudas ,buscando mejorar en nuestras relaciones interpersonales para brindar confianza y transparencia a todos nuestros usuarios .</p>
                 <div class ="row">
                     <!--Miembros--><!--rounted circle singnifa fomra de circulo con un ancho circular-->
                     <div class="col-lg-3"> <!--me crea tres columnas en un tamaño pantalla grande--> 
