--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="device-width,initial-scale=1, shrink-to-fit=no">
 
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -27,7 +28,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
 
         <a class="navbar-brand" href="index.html">Fisinova</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
             <img src="/img/menu.svg">
         </button>
 
@@ -65,7 +67,9 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="header-content-left">
                         <h1>Bienvenido</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, est! Sed odit distinctio sint nostrum. Distinctio aliquid commodi ea quam architecto, illum esse nesciunt nemo laboriosam maiores? Sed, optio deserunt.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, est! Sed odit distinctio
+                            sint nostrum. Distinctio aliquid commodi ea quam architecto, illum esse nesciunt nemo
+                            laboriosam maiores? Sed, optio deserunt.</p>
                         <a href="#" class="btn btn-outline-secondary btn-lg mt-2">Saber mas</a>
                     </div>
                 </div>
@@ -91,7 +95,9 @@
                     <div class="about-right">
                         <h1>Somos una Comunidad</h1>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, molestiae. Perferendis cupiditate fuga modi aspernatur ex reiciendis, eos sunt recusandae fugiat rerum maiores eius sequi, aliquid dolorem obcaecati. Id, labore!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, molestiae. Perferendis
+                            cupiditate fuga modi aspernatur ex reiciendis, eos sunt recusandae fugiat rerum maiores eius
+                            sequi, aliquid dolorem obcaecati. Id, labore!
                         </p>
                         <p class="h4">-uwu</p>
                     </div>
@@ -119,11 +125,13 @@
 
                         </div>
 
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -157,7 +165,8 @@
                                 <div class="form-group">
                                     <textarea rows="3" cols="3" placeholder="Mensaje" class="form-control"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-outline-secondary btn-block" name="enviar">Enviar</button>
+                                <button type="submit" class="btn btn-outline-secondary btn-block"
+                                    name="enviar">Enviar</button>
                             </div>
                         </form>
                         <?php
@@ -180,8 +189,12 @@
 
 
     <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 </body>
 
