--- a/MAPAEJEMPLO.html
+++ b/MAPAEJEMPLO.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="device-width,initial-scale=1, shrink-to-fit=no">
 
     <!--Bootstrap CSS-->
-   <link rel="stylesheet" href="css/boostrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/boostrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -23,47 +24,24 @@
 
 <body>
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="nav-toggler" data-target="menu" data-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <a class="navbar-brand" href="index.html">Fisinova</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="/img/menu.svg">
-        </button>
-
-        <!--Items-->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html" id="">Inicio </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="sobreNosotros.html" id="">Sobre Nosotros</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="agenda.html" id="">Agenda</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="Contactanos.html" id="">Contactanos</a>
-                </li>
-                <li>
-                    <a href="phptube/login.php" class="btn2 redondeado">Iniciar sesion</a>
-                </li>
-                <li>
-                    <a href="phptube/register.php" class="btn2 redondeado">Registrarse</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
 
 
     <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
