--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
 
     <!--Estilos-->
+  
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/sobreNosotros.css">
-
+    <link rel="stylesheet" href="css/agenda.css">
     <title>Fisinova</title>
 
 </head>
@@ -25,16 +25,16 @@
     <nav class="navbar navbar-expand-lg fixed-top">
 
         <a class="navbar-brand" href="index.html">Fisinova</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
             <img src="/img/menu.svg">
         </button>
 
         <!--Items-->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" id="">Inicio </a>
+                    <a class="nav-link" href="#" id="">Inicio </a>
                 </li>
 
                 <li class="nav-item">
