--- a/Contactanos.html
+++ b/Contactanos.html
@@ -318,11 +318,11 @@
                     <!--me crea tres columnas en un tamaño pantalla grande-->
                     <div class="card">
                         <div class="card-body">
-                            <img src="img/avatar_uwu.JPG" class="img-fluid
+                            <img src="img/rodrigo_person.jpg" class="img-fluid
                                 rounded-circle w-50" alt="Persona 3">
                             <h3 class="fisinova-txt">Rodrigo Vega Centeno</h3>
                             <p>________________</p>
-                            <p class="fisinova-txt2">Fisiano con ganas de superacion : u </p>
+                            <p class="fisinova-txt2">Emprendedor,colaborador y empatico en el ambiente laboral</p>
 
                         </div>
                         <div class="d-flex flex-row 
