--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -186,8 +186,8 @@
     <table border = "5">
         <div class="galeri">
             <tr>
-                <th><img src="img/fisinova_spam.jpg" alt=""></th>
-                <th><img src="img/btn.postular.jpg" alt=""></th>
+                <th><img src="img/fisinova_spam.jpg" class="img-fluid" alt=""></th>
+                <th><img src="img/btn.postular.jpg" class="img-fluid" alt=""></th>
             </tr>
         </div>
      
