--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
     </section>
 
 
- 
+
 
     <section id="about-one">
         <div clas="container">
             <div class="row no-gutters">
                 <div class="col-md-6">
                     <div class="about-left">
-                        <img src="img/logo.png">
+                        <img src="img/logo-dark.png">
                     </div>
                 </div>
                 <div class="col-md-6">
