--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="animated bounceInRight" style="animation-delay: 1s" >Fisinova</h5>
                         <p class="animated bounceInLeft" style="animation-delay: 2s" >No lo dudes postula ya</p>
-                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="#">Postula</a></p>
+                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="encuesta.html">Postula</a></p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/2_carrusel.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="animated slideInDown" style="animation-delay: 1s" >Fisinova</h5>
-                        <p class="animated fadeInUp" style="animation-delay: 2s" >No lo dudes postula ya</p>
-                        <p class="animated zoomIn" style="animation-delay: 3s" ><a href="#">Mas informacion</a></p>
+                        <p class="animated fadeInUp" style="animation-delay: 2s" >Conocenos más</p>
+                        <p class="animated zoomIn" style="animation-delay: 3s" ><a href="sobreNosotros.html">Mas informacion</a></p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -136,8 +136,8 @@
                     <img src="img/3_carrusel.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="animated zoomIn" style="animation-delay: 1s" >Fisinova</h5>
-                        <p class="animated fadeInLeft" style="animation-delay: 2s" >No lo dudes postula ya</p>
-                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="#">Mas informacion</a></p>
+                        <p class="animated fadeInLeft" style="animation-delay: 2s" >Bases del concurso</p>
+                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="agenda.html">Informacion</a></p>
                     </div>
                 </div>
             </div>
