--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="row no-gutters">
                 <div class="col-md-6">
                     <div class="about-left">
-                        <img src="img/logo-dark.png">
+                        <img src="img/logo-d.JPG">
                     </div>
                 </div>
                 <div class="col-md-6">
