--- a/agenda.html
+++ b/agenda.html
@@ -206,7 +206,7 @@
         <div class="textBase3 ">
             <div class="imagenB1">
                 <h6>Fisinova</h6>
-                <h2>Malla curricular</h2>
+                <h2>Conferencia</h2>
             </div> 
         </div> 
         
