--- a/Contactanos.html
+++ b/Contactanos.html
@@ -276,11 +276,11 @@
                     <!--me crea tres columnas en un tamaño pantalla grande-->
                     <div class="card">
                         <div class="card-body">
-                            <img src="img/avatar_uwu.JPG" class="img-fluid
+                            <img src="img/anthony_person.jpg" class="img-fluid
                                 rounded-circle w-50" alt="Persona 2">
                             <h3 class="fisinova-txt">Anthony Ricse Perez</h3>
                             <p>________________</p>
-                            <p class="fisinova-txt2">Fisiano con ganas de superacion : u </p>
+                            <p class="fisinova-txt2">Perseverante y proactivo en el ambito laboral</p>
 
                         </div>
                         <div class="d-flex flex-row 
