--- a/agenda.html
+++ b/agenda.html
@@ -219,7 +219,7 @@
              </div>
             
              <div class="BASE col-md">
-                 <a href="">
+                 <a href="https://meet.google.com/bab-gfex-tbp">
                     <img src="img/meet_enlace.JPG" class="img-fluid" alt="">                        
 
                  </a>
