--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="row justify-content-center align-items-center vh-90 ">
                 <div class="col-sm-8">
                  <h1>Agenda</h1>
-                 <img src="img/agenda_2.jpg" class="img-fluid" alt="agenda2" class="img-ts rounded float-xs-right">
+                 <img src="img/Fisi_agenda_index.JPG" class="img-fluid" alt="agenda2" class="img-ts rounded float-xs-right">
              
                 </div>
                 
