--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="animated bounceInRight" style="animation-delay: 1s" >Fisinova</h5>
                         <p class="animated bounceInLeft" style="animation-delay: 2s" >No lo dudes postula ya</p>
-                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="encuesta.html">Postula</a></p>
+                        <p class="animated bounceInRight" style="animation-delay: 3s" ><a href="encuesta.php">Postula</a></p>
                     </div>
                 </div>
                 <div class="carousel-item">
