--- a/Contactanos.html
+++ b/Contactanos.html
@@ -245,7 +245,7 @@
                            justify-content-center">
                             <!--esta parte hace que los contenidos esten adentro y centrado y justificado-->
                             <div class="p-4">
-                                <a href="https://www.facebook.com/anthony98ricse/" target="blank">
+                                <a href="https://www.facebook.com/alexander.torre.752/" target="blank">
                                     <!--te enviaa otra pagina-->
 
                                     <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -329,7 +329,7 @@
                             justify-content-center">
                             <!--esta parte hace que los contenidos esten adentro y centrado y justificado-->
                             <div class="p-4">
-                                <a href="https://www.facebook.com/anthony98ricse/" target="blank">
+                                <a href="https://www.facebook.com/rodrigo.vega.77128/" target="blank">
                                     <!--te enviaa otra pagina-->
 
                                     <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -337,7 +337,7 @@
                                 </a>
                             </div>
                             <div class="p-4">
-                                <a href="https://www.facebook.com/anthony98ricse/" target="blank">
+                                <a href="https://www.instagram.com/rodrigo.s.v.c/" target="blank">
                                     <!--te enviaa otra pagina-->
 
                                     <i class="fab fa-instagram" aria-hidden="true"></i>
@@ -362,7 +362,7 @@
                         <div class="card-body">
                             <img src="img/walter_person.jpg" class="img-fluid
                                 rounded-circle w-50" alt="Persona 4">
-                            <h3 class="fisinova-txt">Walter Suel Arrollo</h3>
+                            <h3 class="fisinova-txt">Walter Suel Arroyo</h3>
                             <p>________________</p>
                             <p class="fisinova-txt2">Programador y Diseñador Web expectante a las nuevas tecnologías</p>
 
@@ -371,7 +371,7 @@
                             justify-content-center">
                             <!--esta parte hace que los contenidos esten adentro y centrado y justificado-->
                             <div class="p-4">
-                                <a href="https://www.facebook.com/anthony98ricse/" target="blank">
+                                <a href="https://www.facebook.com/nick.suel.9" target="blank">
                                     <!--te enviaa otra pagina-->
 
                                     <i class="fab fa-facebook-f" aria-hidden="true"></i>
