--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -134,8 +134,10 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Fisinova nace de la idea de fomentar la competitividad , además su de recopilar la data y
-                            mostrar los logros de nuestra comunidad San Marquina
+                            Esta idea nacio a traves de un brainstorming , con el objetivo de transmitir conocimientos y
+                            brindar apoyo a los nuevos ingresantes.De esta manera nacio Fisinova , con tiempo y
+                            dedicación fue mejorando e implementando las funcionalidades necesarias para su posterior
+                            realización e desarrollo, además fuimos aconsejados por el docente Pantoja Collante Jorge.
                             <code></code>.
                         </div>
                     </div>
@@ -150,107 +152,104 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong></strong>
+                            Fisinova se relaciona con sus usuarios , bucando interconectar emociones y funcionalidades ,
+                            asi las personas interesadas e implementar ideas innovadoras y proyectos con relación al
+                            desarrollo de software , son cordialmente invitados a participar y a demsotrar su
+                            competitividad .UNMSM
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Nuestro trabajo
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong></strong>
+                                Consistió en dar soporte a la página web cumpliendo todos los requerimientos solicitados
+                                por el docente a través de prototipos implementados y presentados semana a semana por
+                                los integrantes del proyecto Fisinova.
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Nuestro trabajo
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                    </div>
-                </div>
+
             </div>
 
-        </div>
+            <section id="galeria" class="container">
+                <table border="5">
+                    <div class="galeri">
+                        <tr>
+                            <th><img src="img/fisinova_spam.jpg" class="img-fluid" alt=""></th>
+                            <th><img src="img/btn.postular.jpg" class="img-fluid" alt=""></th>
+                        </tr>
+                    </div>
 
-<section id="galeria" class="container">
-    <table border = "5">
-        <div class="galeri">
-            <tr>
-                <th><img src="img/fisinova_spam.jpg" class="img-fluid" alt=""></th>
-                <th><img src="img/btn.postular.jpg" class="img-fluid" alt=""></th>
-            </tr>
-        </div>
-     
-       
 
-    </table>
-  
-</section>
 
-    <section id="contact-one">
-        <div clas="container">
-            <div class="row no-gutters">
-                <div class="col-md-6">
-                    <div class="contact-left">
-                        <h1>Contactanos</h1>
-                        <form class="card" method="POST">
-                            <div class="card-body">
+                </table>
 
-                                <div class="form-group">
-                                    <input type="text" placeholder="Nombre" class="form-control" name="nombre">
-                                </div>
+            </section>
 
-                                <div class="form-group">
-                                    <input type="email" placeholder="email" class="form-control" name="email">
-                                </div>
+            <section id="contact-one">
+                <div clas="container">
+                    <div class="row no-gutters">
+                        <div class="col-md-6">
+                            <div class="contact-left">
+                                <h1>Contactanos</h1>
+                                <form class="card" method="POST">
+                                    <div class="card-body">
 
-                                <div class="form-group">
-                                    <textarea rows="3" cols="3" placeholder="Mensaje" class="form-control"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-outline-secondary btn-block"
-                                    name="enviar">Enviar</button>
-                            </div>
-                        </form>
-                        <?php
+                                        <div class="form-group">
+                                            <input type="text" placeholder="Nombre" class="form-control" name="nombre">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <input type="email" placeholder="email" class="form-control" name="email">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <textarea rows="3" cols="3" placeholder="Mensaje"
+                                                class="form-control"></textarea>
+                                        </div>
+                                        <button type="submit" class="btn btn-outline-secondary btn-block"
+                                            name="enviar">Enviar</button>
+                                    </div>
+                                </form>
+                                <?php
                             include("registrar.php");
                             ?>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="contact-right">
-                        <h1>Informacion</h1>
-                        <div class="form-group">
-                            <input type="email" placeholder="email" class="form-control">
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-outline-secondary btn-block">Enviar</button>
+                        <div class="col-md-6">
+                            <div class="contact-right">
+                                <h1>Informacion</h1>
+                                <div class="form-group">
+                                    <input type="email" placeholder="email" class="form-control">
+                                </div>
+                                <button type="submit" class="btn btn-outline-secondary btn-block">Enviar</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+            </section>
+            <!--Scripts-->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+            <script src="http://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
