Practica para unir ramas Estoy trantado de unir ramas desde consola.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="about-right text-center">
                         <h1>Somos una Comunidad</h1>
                         <p>
-                            ALEX ESTUVO AQUI :P
+                            TRANTANDO DE UNIR RAMAS
                         </p>
                     </div>
                 </div>
