Revert "Practica para unir ramas"
This reverts commit 5fe190eb7d0231f218b60be41fe7c9a2ad0591a0.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="about-right text-center">
                         <h1>Somos una Comunidad</h1>
                         <p>
-                            TRANTANDO DE UNIR RAMAS
+                            ALEX ESTUVO AQUI :P
                         </p>
                     </div>
                 </div>
