Revert "Probando en Consola" Ya todo esta bien. This reverts commit ed272a2e0507244455f725c0aef6342685842abd.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
                     <div class="about-right text-center">
                         <h1>Somos una Comunidad</h1>
                         <p>
-                            TRANTANDO DE UNIR RAMAS
+                            Conformada por estudiantes de la Universidad Nacional Mayor de San Marcos que buscan el
+                            beneficio común para la comunidad de programadores, el cual tiene como objetivo la
+                            incubación de proyectos innovadores además de la fijación de un área de competitividad y
+                            publicidad de proyectos.
                         </p>
                     </div>
                 </div>
